objects/ASI_FOC_Free_Goods_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_FOC_MFM_Consumer_AP_PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFM PO Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Is_FOC_PO__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final, Complete, Partial Paid</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Net_off_FOC_PO__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_FOC_PO_Remaining_Amount__c</field>
                <operation>greaterOrEqual</operation>
                <value>0</value>
            </filterItems>
            <infoMessage>The PO need to be FOC PO and have available amount for issuing FOC.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>ASI_FOC_Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_MFM_PO_Final_Amount__c</fullName>
        <formula>ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_PO_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFM PO Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_MFM_PO_Prefix__c</fullName>
        <label>MFM PO Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_MFM_PO_Remaining_Amount__c</fullName>
        <formula>ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_FOC_PO_Remaining_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFM PO Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_No_Company_Chop_Acceptable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Company Chop Acceptable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Not_for_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not for Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Number_of_Saves__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Saves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Order_Status__c</fullName>
        <label>Order Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Others_Please_specify__c</fullName>
        <label>Others, Please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_POSM_Request_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POSM Request Approval</label>
        <referenceTo>ASI_FOC_Free_Goods_Request__c</referenceTo>
        <relationshipLabel>POSM Request Approval Item</relationshipLabel>
        <relationshipName>ASI_FOC_POSM_Request_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Final_Amount__c</fullName>
        <formula>ASI_FOC_PO__r.ASI_FOC_PO_Final_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Final Amount(Consumer A&amp;P)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Remaining_Amount__c</fullName>
        <formula>ASI_FOC_PO__r.ASI_FOC_PO_Remaining_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Remaining Amount(Consumer A&amp;P)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO_Sub_brand__c</fullName>
        <formula>ASI_FOC_PO__r.ASI_FOC_PO_Sub_brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer A&amp;P PO Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_FOC_PO__c.ASI_FOC_Valid_for_FOC__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_FOC_PO__c</referenceTo>
        <relationshipName>ASI_FOC_Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Pre_Approval_Form_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to CRM Pre-Approval Form, currently used in HK FOC</description>
        <label>Pre-Approval Form Number</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Tasting</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Luxe</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Replacement Stock</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PRC Owned Event tasting</fullName>
                </value>
                <value>
                    <fullName>3rd party event tie-in</fullName>
                </value>
                <value>
                    <fullName>Product barter</fullName>
                </value>
                <value>
                    <fullName>Promotion Products to indirect sales outlet</fullName>
                </value>
                <value>
                    <fullName>PRC employee tasting</fullName>
                </value>
                <value>
                    <fullName>Replacement Stock &amp; CIQ-Operation only</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Internal usage</fullName>
                </value>
                <value>
                    <fullName>Gifts to 3rd party</fullName>
                </value>
                <value>
                    <fullName>Gifts to employees</fullName>
                </value>
                <value>
                    <fullName>Gifts to non-employees (individual)</fullName>
                </value>
                <value>
                    <fullName>STK2</fullName>
                </value>
                <value>
                    <fullName>STK4</fullName>
                </value>
                <value>
                    <fullName>Special Promotion for Metro</fullName>
                </value>
                <value>
                    <fullName>Only for Metro Promotion Business</fullName>
                </value>
                <value>
                    <fullName>HQ STK4 Order</fullName>
                </value>
                <value>
                    <fullName>Central STK4 Order</fullName>
                </value>
                <value>
                    <fullName>MKT STK4 Order</fullName>
                </value>
                <value>
                    <fullName>Brand promotion</fullName>
                </value>
                <value>
                    <fullName>External entertainment</fullName>
                </value>
                <value>
                    <fullName>Other external usage: video shooting, sample, research etc.</fullName>
                </value>
                <value>
                    <fullName>Company internal use: TB, AD, training</fullName>
                </value>
                <value>
                    <fullName>East STK4 Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Reason_for_Address_Change__c</fullName>
        <label>Reason for Address Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Receipt_Generated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt Generated Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Receiptor_Mobile__c</fullName>
        <label>Recipient Mobile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Receiptor_Name__c</fullName>
        <label>Recipient Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Refer_to_CRM_Order_MKT__c</fullName>
        <label>Refer to CRM Order (Marketing)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Refer_to_CRM_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refer to CRM Order (Sales)</label>
        <referenceTo>ASI_HK_CRM_Sales_Order__c</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Rejected_by_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected by System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected by Logistic</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved by Logistic</fullName>
                </value>
                <value>
                    <fullName>Rejected by Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Structure Cost</fullName>
                </value>
                <value>
                    <fullName>Logistic Cost</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Wine/Spirits</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_STK_4_Count_Sales_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STK 4 (Count Sales Volume)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Actual_Amount__c</fullName>
        <label>SYS Actual Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Free_Goods_Actual_Cost__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Approved_Date__c</fullName>
        <label>SYS Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Approved_by_Me__c</fullName>
        <formula>OR(
$User.Id =   ASI_FOC_Approver_1__c,
$User.Id =   ASI_FOC_Approver_2__c,
$User.Id =   ASI_FOC_Approver_3__c,
$User.Id =   ASI_FOC_Approver_4__c,
$User.Id =   ASI_FOC_Approver_5__c,
$User.Id =   ASI_FOC_Approver_6__c,
$User.Id =   ASI_FOC_Approver_7__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Approved by Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Finance_Comment__c</fullName>
        <label>SYS Finance Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Notified_Sales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified Sales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Number_of_Saves__c</fullName>
        <description>For display only</description>
        <formula>ASI_FOC_Number_of_Saves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Saves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Owner__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Rejected_by_Logistic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Rejected by Logistic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Request_Line_Information__c</fullName>
        <label>SYS Request Line Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Submitted_Time__c</fullName>
        <label>SYS Submitted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Synced_Lines__c</fullName>
        <label>SYS Synced Lines</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_SO_Actual_Extended_Cost__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Actual_Quantity_Bottle__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_BD_Approval_Items__c</fullName>
        <label>SYS Total BD Approval Items</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_BD_Approved_Items__c</fullName>
        <label>SYS Total BD Approved Items</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>In Progress, Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Bottle_Count__c</fullName>
        <label>SYS Total Bottle Count</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Request_Quantity_Bottle__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Cancel_Item__c</fullName>
        <label>SYS Total Cancel Item</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Cancel_Quantity_PC_BT__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Lines__c</fullName>
        <label>SYS Total Lines</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Premium_Item_Count__c</fullName>
        <label>SYS Total Premium Item Count</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Request_Quantity_Bottle__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Is_Premium__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_RequestWithQuantity__c</fullName>
        <label>SYS Total Request Item_With_Quantity</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_MFM_AutoComplete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SYS_Total_Request_Item__c</fullName>
        <label>SYS Total Request Item</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Original_Request_Quantity_PC_BT__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Sales_Director</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Specify_if_Others__c</fullName>
        <label>Specify if Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Approved_By_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Approved_By_Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Approved_By_Logistic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Approved By Logistic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Item_Count__c</fullName>
        <label>Sys_Item_Count</label>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Reject_Comments__c</fullName>
        <label>Sys Reject Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_To_Regional_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>POP CENTRAL
POP E-COMMERCE
POP EAST
POP HEADQUARTER
POP IHBR
POP NORTH
POP NORTH WEST
POP SOUTH
POP SOUTH WEST</inlineHelpText>
        <label>To Regional Warehouse</label>
        <referenceTo>ASI_FOC_Warehouse__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Total_List_Price_With_Tax__c</fullName>
        <label>Total List Price(With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Trade_A_P_PO_Number__c</fullName>
        <label>Trade A&amp;P PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Urgent_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Warehouse_Code__c</fullName>
        <label>Warehouse Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Add_ValueSet_Service__c</fullName>
        <label>VAS (Multiple)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>组装</fullName>
                    <label>组装（包括拆除木箱、摆放）</label>
                </value>
                <value>
                    <fullName>垃圾清理</fullName>
                </value>
                <value>
                    <fullName>卖场配送服务</fullName>
                    <label>卖场配送服务（包括预约、排队、打单、分拣等）</label>
                </value>
                <value>
                    <fullName>配送上下楼服务</fullName>
                </value>
                <value>
                    <fullName>物料回收</fullName>
                    <label>物料回收（反向运输或销毁）</label>
                </value>
                <value>
                    <fullName>二次包装</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Add_Value_Service__c</fullName>
        <label>VAS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>组装</fullName>
                    <label>组装（包括拆除木箱、摆放）</label>
                </value>
                <value>
                    <fullName>垃圾清理</fullName>
                </value>
                <value>
                    <fullName>卖场配送服务</fullName>
                    <label>卖场配送服务（包括预约、排队、打单、分拣等）</label>
                </value>
                <value>
                    <fullName>配送上下楼服务</fullName>
                </value>
                <value>
                    <fullName>物料回收</fullName>
                    <label>物料回收（反向运输或销毁）</label>
                </value>
                <value>
                    <fullName>二次包装</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_DeliveryTime__c</fullName>
        <label>Expected Delivery Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9:00-12:00</fullName>
                </value>
                <value>
                    <fullName>12:00-18:00</fullName>
                </value>
                <value>
                    <fullName>18:00-24:00（夜间急配）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_DetailAddress__c</fullName>
        <label>Detail Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ForPOSMCart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For POSM Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FromWarehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Warehouse</label>
        <referenceTo>ASI_FOC_Warehouse__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (From Warehouse)</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_LeadTimeCart__c</fullName>
        <label>Lead Time (Cart)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_OperationTeamEmail1__c</fullName>
        <label>Operation Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_OperationTeamEmail2__c</fullName>
        <label>Operation Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_OperationTeamEmail3__c</fullName>
        <label>Operation Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POSM_PO_Number__c</fullName>
        <label>POSM PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ReasonForTime__c</fullName>
        <label>Reason for Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_RecipientEmail__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Request_Category_Recipient__c</fullName>
        <formula>CASE(ASI_MFM_Request_Category__c 
,&apos;ASI_MFM_CN_Outlet&apos;,ASI_CRM_Outlet__r.Name 
,&apos;ASI_MFM_CN_Office&apos;,ASI_FOC_To_Regional_Warehouse__r.Name 
,&apos;ASI_MFM_CN_Warehouse&apos;,ASI_FOC_To_Regional_Warehouse__r.Name 
,&apos;ASI_MFM_CN_Agency&apos;,ASI_MFM_Supplier_Name__r.Name 
,&apos;ASI_MFM_CN_Dummy&apos;, ASI_MFM_Tax_Saving_Purpose__r.ASI_MFM_ChineseDescription__c
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Category Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Request_Category__c</fullName>
        <label>Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASI_MFM_CN_Outlet</fullName>
                    <label>客户</label>
                </value>
                <value>
                    <fullName>ASI_MFM_CN_Office</fullName>
                    <label>办公室</label>
                </value>
                <value>
                    <fullName>ASI_MFM_CN_Warehouse</fullName>
                    <label>仓库</label>
                </value>
                <value>
                    <fullName>ASI_MFM_CN_Agency</fullName>
                    <label>Agency</label>
                </value>
                <value>
                    <fullName>ASI_MFM_CN_Dummy</fullName>
                    <label>Dummy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_SIREmailAddress1__c</fullName>
        <label>SIR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SIREmailAddress2__c</fullName>
        <label>SIR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SIREmailAddress3__c</fullName>
        <label>SIR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SubmitDate__c</fullName>
        <label>Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (Supplier Name)</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Saving_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Saving Purpose</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Expense_Control_Form__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Tax Saving Control Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Expense_Control_Form__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>